add span class info,add xolor to info

--- a/portfolio-landing-page.html
+++ b/portfolio-landing-page.html
@@ -16,8 +16,18 @@
   </div class="intro">
   <div class="Me">
   <p><strong>ABOUT ME</strong></p>
-
   <p><span class="bold">Education :</span>Bachelor of Commerce;Kabarak University</p>
   <p><span class="bold">Job Experience :</span>Marketing Executive;Biodeposit Lv</p>
-  <p><span class="bold">About :</span</p>
+  <p><span class="bold">About :</span>Programming was always that thing that seemed to be missing in my career going forward.I have always wanted to pursue a career in Digital Marketing and moreso have the knohow on the inner workings of web development.When the oportunity arose for me to follow this passion I jumped on it fast and am hoping to achieve my goal at the end of Moringa School.</p>
+  <p><span class="info">Hobbies and Skills ;</span>
+      <ul>
+        <li>I enjoy travelling</li>
+        <li>Extreme advenure like Paragliding</li>
+        <li>I enjoy reading a good book</li>
+        <li>I like helping people-I derive satisfaction seeing someone benefit from my efforts</li>
+        <li>I love meeting new people and having great conversations</li>
+        <li>I love spending time with my family</li>
+        <li>I love hearing the word of God</li>
+        <li>Finally I enjoy a good adventure game like Witcher 3.</li>
+  </p>
 </div class"Me">
