add changw background color,add change in html

--- a/portfolio-landing-page.html
+++ b/portfolio-landing-page.html
@@ -30,6 +30,6 @@
         <li>I love hearing the word of God</li>
         <li>Finally I enjoy a good adventure game like Witcher 3.</li>
   </p>
-  <p>check out <a> href="My-Favorite-Pet.html"My Favorite Pet</a></p>
+  <p>check out <a href="index.html">My Favorite Pet</a></p>
   <p>My Favorite Pet is written in HTML and it describes my awesome pet Gafi and his interests</p>
 </div class"Me">
